--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JavaScript Travarsing</title>
+        <link rel="stylesheet" href="./Css/style.css" />
     </head>
     <body>
-        
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>3</td>
+                        <td>deepak</td>
+                        <td>deepak@gamil.com</td>
+                        <td>
+                            <button onclick="view(this)" id="d_view">View</button>
+                            <button onclick="">Edit</button>
+                            <button onclick="">Delete</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>pankaj</td>
+                        <td>pankaj@gamil.com</td>
+                        <td>
+                            <button class="d_view">View</button>
+                            <button>Edit</button>
+                            <button>Delete</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+            <script src="./js/script.js"></script>
     </body>
 </html>
